# rustperiments

./: README.md
hello/: Cargo.toml
hello/src/: lib.rs  main.rs
roguelikerust/: Cargo.toml
roguelikerust/resources/: LICENSE
roguelikerust/src/: main.rs
thebook/: Cargo.toml
thebook/src/: ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch5_user.rs  ch6.rs  main.rs
twentyfourdays/: .gitignore  Cargo.toml
twentyfourdays/src/: day2.rs  day3.rs  day4.rs  main.rs
