[package]
name = "twentyfourdays"
version = "0.1.0"
authors = ["nitzel <jan.s.92@web.de>"]
edition = "2018"
description = "Tutorial https://zsiciarz.github.io/24daysofrust/book/vol1/day1.html - but as it's severely outdated I'll move to the rustbook again"

[dependencies]
getopts = "~0.2.14"
num = "~0.1.36"
permutohedron = "~0.2.2"
primal = "~0.2.3"
csv = "1.1.3"
serde =  { version = "1", features = ["derive"] }
docopt = "1.1"